--- a/client/src/css/partials/home/_about.scss
+++ b/client/src/css/partials/home/_about.scss
@@ -8,6 +8,7 @@
         min-height: 60vh;
         position: relative;
         padding: 3em 0em;
+        margin: 5em 0;
 
         .about-image {
             width: 35%;
