--- a/client/src/css/partials/home/_process.scss
+++ b/client/src/css/partials/home/_process.scss
@@ -1,6 +1,7 @@
 .process-container {
     .process-section {
         min-height: 100vh;
+        margin: 4em 0;
         
         .single-process {
             width: 60%;
