--- a/client/src/css/partials/home/_services.scss
+++ b/client/src/css/partials/home/_services.scss
@@ -4,13 +4,14 @@
 
     .grouped-services {
         min-height: 100vh;
-        padding: 2em;
         display: flex;
         justify-content: center;
         align-items: center;
 
         .services-offered {
-            max-width: 1000px;
+            width: 90%;
+            max-width: 1300px;
+            margin: 5em 0;
             text-align: center;
             display: flex;
             justify-content: center;
@@ -19,7 +20,7 @@
             .single-service {
                 width: 250px;
                 min-width: 250px;
-                margin: 1em;
+                margin: 2em;
                 border: 1px solid rgba(0,0,0,.125);
                 border-radius: .25rem;
                 box-shadow: inset 0px 4px 6px rgba(0, 0, 0, 0.25);
